--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,32 +5,57 @@
 body {
     font-size: 20px;
     margin: 0;
-    background: #83a4d4;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #b6fbff, #83a4d4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background: url(../images/hh.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 h1 {
-    padding: 20px;
-    margin: 0;
-    color: rgba(54, 7, 7, 0.836);
+    padding-bottom: 0;
+    padding-top: 10px;
+    margin: 0 auto;
     text-align: center;
+    font-family: 'Manjari', sans-serif;
+    background: whitesmoke;
+    max-width: 400px;
+    border-radius: 3px;
+    
 }
 
 p {
     padding: 15px;
-    margin: 0;
-    border-top: 2px solid #ffe0e0;
+    margin: 15px auto;
+    background: whitesmoke;
+    max-width: 400px;
+    border-radius: 3px;
 }
 
 .container {
     max-width: 650px;
     width: 100%;
     margin: 100px auto;
-    border: 5px solid #ffe0e0;
+}
+.left {
+    float: left;
+    width: 45%;
+
+}
+.right {
+    float: right;
+    width: 45%;
+
+}
+.together {
+    text-align: center;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.clear {
+    clear: both;
 }
 
 
